--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <body>
 
-<h1>Tóth Sándor,Tóth Tibor,Gulyás Mátyás,Oleszka Attila</h1>
+<h1>KONI</h1>
 <p>9/D</p>
 
 <a href="https://rog.asus.com/hu/motherboards/rog-maximus/rog-maximus-xiii-extreme-glacial-model/">
-<img src="801464706.asus-rog-maximus-xiii-extreme-glacial.jpg" alt="Asus alaplap" width="104" height="142">
+<img src="https://dlcdnwebimgs.asus.com/gain/54B2AC93-9147-4A89-91B2-9162B488A2B1/w717/h525">
 </a>
 
 </body>
